plugins {
    id 'java'
    id 'com.gradleup.shadow' version '9.0.0'
}

group = 'com'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(Test).configureEach {
    jvmArgs += ['--enable-preview']
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-jupiter'

    compileOnly 'org.projectlombok:lombok:1.18.44'
    annotationProcessor 'org.projectlombok:lombok:1.18.44'

    testCompileOnly 'org.projectlombok:lombok:1.18.44'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.44'
}

test {
    useJUnitPlatform()
}

shadowJar {
    archiveBaseName.set('VisualSorting')
    archiveClassifier.set('')
    archiveVersion.set(version)

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    mergeServiceFiles()
    exclude 'META-INF/**'

    manifest {
        attributes 'Main-Class': 'Main'
    }
}

tasks.build {
    dependsOn shadowJar
}